He hecho unos ejemplos basicos. deberia de funcionar bien directamente, en caso de que no me avisais. Todos los algoritmos deben de heredar de AbstractOptimization. Ademas para poder usarlos, hay que añadirlos a las opciones disponibles en el main